cicd/k8s/prawobiorca-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prawobiorca-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prawobiorca
      component: prawobiorca-worker
  template:
    metadata:
      labels:
        app: prawobiorca
        component: prawobiorca-worker
    spec:
      serviceAccountName: prawobiorca-runner
      containers:
        - name: prawobiorca-worker
          image: europe-central2-docker.pkg.dev/prawobiorca/prawobiorca-repo/prawobiorca-backend:latest
          command: ["taskiq", "worker", "app.framework.workers.regulations:broker"]
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: prawobiorca-secrets
