cicd/k8s/prawobiorca-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prawobiorca-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prawobiorca
      component: prawobiorca-backend
  template:
    metadata:
      labels:
        app: prawobiorca
        component: prawobiorca-backend
    spec:
      serviceAccountName: prawobiorca-runner
      containers:
        - name: prawobiorca-backend
          image: europe-central2-docker.pkg.dev/prawobiorca/prawobiorca-repo/prawobiorca-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: files-volume
              mountPath: "/files"
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: prawobiorca-secrets
        - name: files-volume
          persistentVolumeClaim:
            claimName: prawobiorca-files

---
apiVersion: v1
kind: Service
metadata:
  name: prawobiorca-backend
spec:
  type: NodePort
  selector:
    app: prawobiorca
    component: prawobiorca-backend
  ports:
    - port: 8000
      targetPort: 8000
