cicd/k8s/prawobiorca-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prawobiorca-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prawobiorca
      component: prawobiorca-frontend
  template:
    metadata:
      labels:
        app: prawobiorca
        component: prawobiorca-frontend
    spec:
      containers:
        - name: prawobiorca-frontend
          image: europe-central2-docker.pkg.dev/prawobiorca/prawobiorca-repo/prawobiorca-frontend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: prawobiorca-frontend
spec:
  type: NodePort
  selector:
    app: prawobiorca
    component: prawobiorca-frontend
  ports:
    - port: 8000
      targetPort: 8000
