cicd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prawobiorca-backend
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: prawobiorca-backend-cert
spec:
  rules:
    - host: www.prawobiorca.pl
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: prawobiorca-backend
                port:
                  number: 8000
